# jsonhost

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  handlers.rs  lib.rs  main.rs  meta.rs  proxy.rs  validate.rs
systemd/: README.md  jsonhost.service  jsonhost.toml
tests/: integration.rs
